# CMake

./: .codeclimate.yml  LICENSE  README.md  SUMMARY.md
chapter/: appendix.md  basics_commands.md  basics_project_setup.md  basics_use_sources.md  introduction.md
example/: CMakeLists.txt  child.cmake
example/lib/include/example/: calc.h
example/lib/src/: calc.cpp
